--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ android.enableJetifier=false
 org.gradle.jvmargs=-Xmx1024M
 
 android.nonTransitiveRClass=false
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
